--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SpringDataJpa
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/jpademo
 spring.datasource.username=postgres
-spring.datasource.password=Pavan@12345
+spring.datasource.password=YOUR PASSWORD
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
